[package]
name = "ebpf-program"
version = "0.1.0"
authors = ["magnus.kulke <mkulke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2"
redbpf-macros = "1.3"
redbpf-probes = "1.3"

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "block_http"
path = "src/block_http/main.rs"
required-features = ["probes"]
